--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.1",
     "embla-carousel": "^7.0.0",
     "embla-carousel-react": "^7.0.0",
     "next": "12.2.2",
